--- a/css/lapBaoCao.css
+++ b/css/lapBaoCao.css
@@ -1,37 +1,48 @@
 .content_inner {
   margin: auto;
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   border: 1px solid black;
 }
 .content {
-  margin: 1%;
+  padding: 20px;
+  box-sizing: border-box;
   overflow: scroll;
 }
-.charts {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5rem;
-  padding-bottom: 3rem;
-}
-.pieChart {
-  width: 35% !important;
-  height: 45vh !important;
-}
-.barChart {
-  width: 50% !important;
-  height: 45vh !important;
-}
-.lineChart {
-  margin: auto;
-  width: 95% !important ;
-  height: 45vh !important;
+.content_inner::-webkit-scrollbar {
+  display: none;
 }
 .content::-webkit-scrollbar {
   display: none;
 }
-.data {
-  display: flex;
+.graphBox {
+  position: relative;
+  width: 97%;
+}
+.graphBox .top {
+  position: relative;
+  padding: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 30px;
+  min-height: 200px;
+}
+.graphBox .box {
+  position: relative;
+  width: 100%;
+  border-radius: 20px;
+  background-color: #fff;
+  box-shadow: 0px 7px 25px rgba(0, 0, 0, 0.8);
+  box-sizing: border-box;
+  padding: 20px;
+}
+.graphBox .bottomGraph {
+  position: relative;
+  padding: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 30px;
+  min-height: 200px;
 }
