--- a/view/baoCao.html
+++ b/view/baoCao.html
@@ -28,6 +28,24 @@
             </select>
           </div>
           <div class="graphBox">
+            <div class="numbers">
+              <div class="box">
+                <h4>Sức chứa kho còn lại</h4>
+                <h2 id="tongSC"></h2>
+              </div>
+              <div class="box">
+                <h4>Tổng số lượng tồn</h4>
+                <h2 id="tongSLTon"></h2>
+              </div>
+              <div class="box">
+                <h4>Tổng số lượng chờ nhập</h4>
+                <h2 id="tongSLChoNhap"></h2>
+              </div>
+              <div class="box">
+                <h4>Tổng số lượng chờ xuất</h4>
+                <h2 id="tongSLChoXuat"></h2>
+              </div>
+            </div>
             <div class="top">
               <div class="box">
                 <canvas class="pieChart" id="top10"></canvas>
